fixed issue where task form would wrapped inside of list

--- a/src/Pages/Components/TaskManager.css
+++ b/src/Pages/Components/TaskManager.css
@@ -13,11 +13,9 @@ body {
   
   /* TASK LIST */
   .task-list-container {
-    margin-left: 270px;
+    margin-left: 220px;
     background: linear-gradient(#C1E5FB, #E5EDF2);
     border-radius: 10px;
-    max-height: 65vh;
-    overflow-y: auto
   }
   
   .task-list-container ul {
